--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-	<title>Pixi Hotwire</title>
+	<title>Sssnake</title>
+	<link rel="icon" type="image/png" href="/graphics/apple.png">
 
 	<meta id="viewport" name="viewport"
 		content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover" />
