--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Sssnake</title>
-	<link rel="icon" type="image/png" href="/graphics/apple.png">
+	<link rel="icon" type="image/png" href="icon.png">
 
 	<meta id="viewport" name="viewport"
 		content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover" />
